--- a/index.html
+++ b/index.html
@@ -127,15 +127,36 @@
         <h1 class="section2">Каталог</h1>
 
         <div class="katalog">
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
+            <div id="div1">
+                <div class="akcia">
+                    <div class="sskidka">
+                        <h1>-22%</h1>
+                    </div>
+
+                    <h1>до 1 апреля</h1>
+                </div>
+                <img src="./images/Star 2.png">
+
+                <img src="./images/clock2.png">
+                <h1>восток  амфибия 2403</h1>
+                <div>
+                    <p>9 800</p>
+                    <p>₽</p>
+                </div>
+                
+                <div>
+                    <h1>В корзину</h1>
+                </div>
+
+            </div>
+            <div id="div2"></div>
+            <div id="div3"></div>
+            <div id="div4"></div>
+            <div id="div5"></div>
+            <div id="div6"></div>
+            <div id="div7"></div>
+            <div id="div8"></div>
+            <div id="div9"></div>
         </div>
     </main>
     
