--- a/index.html
+++ b/index.html
@@ -360,6 +360,61 @@
                 </div>
             </div>
         </div>
+
+        <div class="filter">
+
+            <h1 class="vibor">Амфибия</h1>
+
+            <h1 class="active">Командирские</h1>
+
+            <div class="point_active"></div>
+
+            <h1 class="vibor">Восток</h1>
+
+            <h1 class="vibor">Атташе</h1>
+
+            <h1 class="vibor">Ретро</h1>
+
+            <div class="line"></div>
+
+            <div class="cena">
+
+                <h1 class="vibor">Цена</h1>
+
+                <div class="price_boxs">
+
+                    <div class="price_box"></div>
+
+                    <div class="line2"></div>
+
+                    <div class="price_box"></div>
+
+                </div>
+
+            </div>
+
+            <div class="sskidka_box">
+
+                <h1 class="sskidka_text">Со скидкой</h1>
+
+                <div class="toggle">
+
+                    <div class="ellipse"></div>
+
+                </div>
+
+            </div>
+
+            <div class="more_filters">
+
+                <img class="img_filter" src="./images/filter.png" alt="">
+
+                <h1 class="filter_text">Еще фильтры</h1>
+
+            </div>
+
+        </div>
+
     </main>
     
     <script src="script.js"></script>
