--- a/index.html
+++ b/index.html
@@ -422,25 +422,25 @@
         <div class="text_boxs">
 
             <div class="text_box">
-                <h1 class="big_text">Более 5000 наименований</h1>
+                <h1 class="big_text">Более 5000 <br> наименований</h1>
                 <h1 class="small_text">Невероятный выбор часов на любой вкус и кошелек, 
                     как премиум так и недорогие</h1>
             </div>
 
             <div class="text_box">
-                <h1 class="big_text">Собственная доставка</h1>
+                <h1 class="big_text">Собственная <br> доставка</h1>
                 <h1 class="small_text">Невероятный выбор часов на любой вкус и кошелек, 
                     как премиум так и недорогие</h1>
             </div>
 
             <div class="text_box">
-                <h1 class="big_text">Все способы оплаты</h1>
+                <h1 class="big_text">Все способы <br> оплаты</h1>
                 <h1 class="small_text">Невероятный выбор часов на любой вкус и кошелек, 
                     как премиум так и недорогие</h1>
             </div>
 
             <div class="text_box">
-                <h1 class="big_text">Шоу-румы в 4х городах</h1>
+                <h1 class="big_text">Шоу-румы <br> в 4х городах</h1>
                 <h1 class="small_text">Невероятный выбор часов на любой вкус и кошелек, 
                     как премиум так и недорогие</h1>
             </div>
