--- a/index.html
+++ b/index.html
@@ -39,6 +39,12 @@
             </div>
         </div>
         
+        <div class="burger_menu">
+            <div class="burger_line1"></div>
+            <div class="burger_line1"></div>
+            <div class="burger_line2"></div>
+        </div>
+
     </header>
     
     <main>
@@ -121,6 +127,7 @@
             </div>
             <div class="div3">
                 <img src="./images/Знак_соответствия 1.png">
+                <h1>PCT</h1>
                 <p>Вся часы полностью сертифицированы</p>
             </div>
         </div>
