--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
             </div>
             <div class="div3">
                 <img src="./images/Знак_соответствия 1.png">
-                <h1>PCT</h1>
+                <h1 class="PCT">PCT</h1>
                 <p>Вся часы полностью сертифицированы</p>
             </div>
         </div>
@@ -241,8 +241,18 @@
 
             <div class="div_grid5" id="div5">
                 <div class="akcia_none">
+                    <div class="shadow">
+                        <div class="sskidka">
+                            <h1 class="procent">-22%</h1>
+                        </div>
+
+                        <h1 class="do_1">до 1 апреля</h1>
+                    </div> 
                     
                 </div>
+
+
+
                 <img class="star5" src="./images/Icon_star.png">
 
                 <img class="clock6" src="./images/clock5.png">
@@ -414,8 +424,10 @@
             </div>
 
             <div class="more_filters">
-
-                <img class="img_filter" src="./images/filter.png" alt="">
+                
+                <div class="filter_box">
+                    <img class="img_filter" src="./images/filter.png" alt="">
+                </div>
 
                 <h1 class="filter_text">Еще фильтры</h1>
 
